--- a/appendix2-T-A.qmd
+++ b/appendix2-T-A.qmd
@@ -57,6 +57,11 @@ process_line <- function(line) {
       return("<div style='line-height: 1.2;'>Virge Roine coronee</div>")
     }
     
+    # SPECIAL CASE: Hard-code line v.1153 to correct repetition
+    if (line_count == 1153) {
+      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='2'>Q</span>nt il ot sorison fenie</div>")
+    }
+    
     # SPECIAL CASE: Hard-code line v.1365 to correct spacing
     if (line_count == 1365) {
       return("<div style='line-height: 1.2;'>Biax Peres Rois de majeste</div>")
@@ -173,6 +178,16 @@ process_line <- function(line) {
   if (xml_name(line) == "l") {
     line_count <<- line_count + 1
     
+    # SPECIAL CASE: Hard-code line v.2 to correct accent
+    if (line_count == 2) {
+      return("<div style='line-height: 1.2;'>ou il ne a se verte non</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.3 to correct accent
+    if (line_count == 3) {
+      return("<div style='line-height: 1.2;'>faite est & tote de verte</div>")
+    }
+    
     # SPECIAL CASE: Hard-code line v.5 to correct apostrophe
     if (line_count == 5) {
       return("<div style='line-height: 1.2;'><span class='line-number'>5</span>Bien croi que volentiers lorront</div>")
@@ -198,6 +213,11 @@ process_line <- function(line) {
       return("<div style='line-height: 1.2;'>Selonguement tiens cest mestier</div>")
     }
     
+    # SPECIAL CASE: Hard-code line v.103 to correct accent
+    if (line_count == 103) {
+      return("<div style='line-height: 1.2;'>Tout sen parente deguerpi</div>")
+    }
+    
     # SPECIAL CASE: Hard-code line v.144 to correct apostrophe
     if (line_count == 144) {
       return("<div style='line-height: 1.2;'>Ja plus tart nen faisoit -i- ris</div>")
@@ -211,6 +231,11 @@ process_line <- function(line) {
     # SPECIAL CASE: Hard-code line v.186 to correct apostrophe
     if (line_count == 186) {
       return("<div style='line-height: 1.2;'>Ja se faichon nen iert escrite</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.212 to correct accent
+    if (line_count == 212) {
+      return("<div style='line-height: 1.2;'>Quele estoit de haut parente</div>")
     }
     
     # SPECIAL CASE: Hard-code line v.350 to correct apostrophe
@@ -263,6 +288,21 @@ process_line <- function(line) {
       return("<div style='line-height: 1.2;'><span class='line-number'>725</span>Entriax navoit pas symonie</div>")
     }
     
+    # SPECIAL CASE: Hard-code line v.729 to correct accent
+    if (line_count == 729) {
+      return("<div style='line-height: 1.2;'>Nus diaus navoit propriete</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.737 to correct accent
+    if (line_count == 737) {
+      return("<div style='line-height: 1.2;'>Quant les avoit conmenies</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.794 to correct accent
+    if (line_count == 794) {
+      return("<div style='line-height: 1.2;'>Apres faisoit les huis fremer</div>")
+    }
+    
     # SPECIAL CASE: Hard-code line v.810 to correct apostrophe
     if (line_count == 810) {
       return("<div style='line-height: 1.2;'><span class='line-number'>810</span>Que nus quens naimme se conte</div>")
@@ -288,6 +328,11 @@ process_line <- function(line) {
       return("<div style='line-height: 1.2;'>Si quele ni avenoit mie</div>")
     }
     
+    # SPECIAL CASE: Hard-code line v.991 to correct accent
+    if (line_count == 991) {
+      return("<div style='line-height: 1.2;'>Cuida fantosme avoir trove</div>")
+    }
+    
     # SPECIAL CASE: Hard-code line v.1007 to correct apostrophe
     if (line_count == 1007) {
       return("<div style='line-height: 1.2;'>Ele lemprist a lever</div>")
@@ -301,6 +346,11 @@ process_line <- function(line) {
     # SPECIAL CASE: Hard-code line v.1135 to correct apostrophe
     if (line_count == 1135) {
       return("<div style='line-height: 1.2;'><span class='line-number'>1135</span>Ou quel i eust ja este</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1153 to correct repetition
+    if (line_count == 1153) {
+      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='2'>Q</span>uant il ot sorison fenie</div>")
     }
     
     # SPECIAL CASE: Hard-code line v.1158 to correct apostrophe
@@ -328,6 +378,11 @@ process_line <- function(line) {
       return("<div style='line-height: 1.2;'>Conques se chars ne li malmist</div>")
     }
     
+    # SPECIAL CASE: Hard-code line v.1333 to correct accent
+    if (line_count == 1333) {
+      return("<div style='line-height: 1.2;'>Quant ala dame avoit parle</div>")
+    }
+    
     # SPECIAL CASE: Hard-code line v.1348 to correct apostrophe
     if (line_count == 1348) {
       return("<div style='line-height: 1.2;'>Pres iere del cors nen savoit mie</div>")
@@ -348,6 +403,11 @@ process_line <- function(line) {
       return("<div style='line-height: 1.2;'>Par un peu quil nestoit tot nus</div>")
     }
     
+    # SPECIAL CASE: Hard-code line v.1398 to correct accent
+    if (line_count == 1398) {
+      return("<div style='line-height: 1.2;'>Lebel servige a conmenchie</div>")
+    }
+    
     # SPECIAL CASE: Hard-code line v.1420 to correct apostrophe
     if (line_count == 1420) {
       return("<div style='line-height: 1.2;'><span class='line-number'>1420</span>la saproisma ou li cors ert</div>")
@@ -358,6 +418,11 @@ process_line <- function(line) {
       return("<div style='line-height: 1.2;'><span class='line-number'>1425</span><span class='decorative-initial' data-size='2'>Q</span>uant li sains hom vit le lion</div>")
     }
     
+    # SPECIAL CASE: Hard-code line v.1431 to correct accent
+    if (line_count == 1431) {
+      return("<div style='line-height: 1.2;'>mais quant il le vit si prive</div>")
+    }
+    
     # SPECIAL CASE: Hard-code line v.1441 to correct spacing
     if (line_count == 1441) {
       return("<div style='line-height: 1.2;'>Que parmi vielt estre enfoie</div>")
@@ -366,6 +431,11 @@ process_line <- function(line) {
     # SPECIAL CASE: Hard-code line v.1466 to correct apostrophe
     if (line_count == 1466) {
       return("<div style='line-height: 1.2;'>El sarcus lont entriax -ii- mis</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1477 to correct accent
+    if (line_count == 1477) {
+      return("<div style='line-height: 1.2;'>Apres quant il lot raune</div>")
     }
     
     # SPECIAL CASE: Hard-code line v.1483 to correct apostrophe
@@ -501,6 +571,11 @@ process_line <- function(line) {
     # SPECIAL CASE: Hard-code line v.531 to correct spacing
     if (line_count == 531) {
       return("<div style='line-height: 1.2;'>Virge Roine coronee</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.1153 to correct repetition
+    if (line_count == 1153) {
+      return("<div style='line-height: 1.2;'><span class='decorative-initial' data-size='2'>Q</span>uant il ot s'orison fenie</div>")
     }
     
     # SPECIAL CASE: Hard-code line v.1365 to correct spacing
