--- a/appendix2-T-F1.qmd
+++ b/appendix2-T-F1.qmd
@@ -113,15 +113,16 @@ process_line <- function(line) {
   # Only increment line count for verse lines
   if (xml_name(line) == "l") {
     line_count <<- line_count + 1
-    # Add line number div every 5th line
-    line_number <- if (line_count %% 5 == 0) {
-      sprintf("<div class='line-number'>%d</div>", line_count)
-    } else {
       
     # SPECIAL CASE: Hard-code line v.134 to fix nesting tags issue
     if (line_count == 134) {
       return("<div style='line-height: 1.2;'>sentdonouet dono vent gnt colees .</div>")
     }
+    
+    # Add line number div every 5th line
+    line_number <- if (line_count %% 5 == 0) {
+      sprintf("<div class='line-number'>%d</div>", line_count)
+    } else {
       ""
     }
   } else {
@@ -219,6 +220,16 @@ process_line <- function(line) {
   if (xml_name(line) == "l") {
     line_count <<- line_count + 1
       
+    # SPECIAL CASE: Hard-code line v.2 to correct accent
+    if (line_count == 2) {
+      return("<div style='line-height: 1.2;'>U il ni ad si verite nun .</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.3 to correct accent
+    if (line_count == 3) {
+      return("<div style='line-height: 1.2;'>Tuite est faite de verite .</div>")
+    }
+    
     # SPECIAL CASE: Hard-code line v.8 to correct spacing
     if (line_count == 8) {
       return("<div style='line-height: 1.2;'>Sapar ole est aspre & dure .</div>")
@@ -227,6 +238,16 @@ process_line <- function(line) {
     # SPECIAL CASE: Hard-code line v.10 to correct apostrophe
     if (line_count == 10) {
       return("<div style='line-height: 1.2;'><span class='line-number'>10</span>e por sa amor mei escoter .</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.13 to correct accent
+    if (line_count == 13) {
+      return("<div style='line-height: 1.2;'>Ke co sacent tuit peccheur .</div>")
+    }
+    
+    # SPECIAL CASE: Hard-code line v.22 to correct accent
+    if (line_count == 22) {
+      return("<div style='line-height: 1.2;'>cil pecche nert ja pardone .</div>")
     }
     
     # SPECIAL CASE: Hard-code line v.15 to correct spacing
@@ -398,15 +419,91 @@ process_line <- function(line) {
   # Only increment line count for verse lines
   if (xml_name(line) == "l") {
     line_count <<- line_count + 1
-    # Add line number div every 5th line
-    line_number <- if (line_count %% 5 == 0) {
-      sprintf("<div class='line-number'>%d</div>", line_count)
-    } else {
+      
+    # SPECIAL CASE: Hard-code line v.4 to correct spacing
+    if (line_count == 4) {
+      return("<div style='line-height: 1.2;'>n'i ad un mot de falseté .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.11 to correct spacing
+    if (line_count == 11) {
+      return("<div style='line-height: 1.2;'>De ma dame seinte Marie .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.41 to correct spacing
+    if (line_count == 41) {
+      return("<div style='line-height: 1.2;'>a tart ad pris le repentir .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.68 to correct spacing
+    if (line_count == 68) {
+      return("<div style='line-height: 1.2;'>Ne li menbrout pas de morir .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.73 to correct spacing
+    if (line_count == 73) {
+      return("<div style='line-height: 1.2;'>Sis peres & sa mere viveient .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.75 to correct spacing
+    if (line_count == 75) {
+      return("<div style='line-height: 1.2;'><span class='line-number'>75</span>Il la voleient chastier .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.83 to correct spacing
+    if (line_count == 83) {
+      return("<div style='line-height: 1.2;'>Pur Deu te pri file Marie .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.96 to correct spacing
+    if (line_count == 96) {
+      return("<div style='line-height: 1.2;'>Quant ad fait tel engendrure .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.103 to correct spacing
+    if (line_count == 103) {
+      return("<div style='line-height: 1.2;'>Tuit sun parenté deguerpit .</div>")
+    }
       
     # SPECIAL CASE: Hard-code line v.134 to fix nesting tags issue
     if (line_count == 134) {
       return("<div style='line-height: 1.2;'>s’entredonouent grant colees .</div>")
     } 
+      
+    # SPECIAL CASE: Hard-code line v.135 to correct spacing
+    if (line_count == 135) {
+      return("<div style='line-height: 1.2;'><span class='line-number'>135</span>Del sanc qui esteit espandu .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.139 to correct spacing
+    if (line_count == 139) {
+      return("<div style='line-height: 1.2;'>Si un moreit de ses amis .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.150 to correct spacing
+    if (line_count == 150) {
+      return("<div style='line-height: 1.2;'><span class='line-number'>150</span>La chaitive dis & set anz .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.151 to correct spacing
+    if (line_count == 151) {
+      return("<div style='line-height: 1.2;'>La vile ert de li enpeire .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.153 to correct spacing
+    if (line_count == 153) {
+      return("<div style='line-height: 1.2;'>e le pais tut envirun .</div>")
+    }
+      
+    # SPECIAL CASE: Hard-code line v.164 to correct spacing
+    if (line_count == 164) {
+      return("<div style='line-height: 1.2;'>Mes blanches erent a merveilles .</div>")
+    }
+    
+    # Add line number div every 5th line
+    line_number <- if (line_count %% 5 == 0) {
+      sprintf("<div class='line-number'>%d</div>", line_count)
+    } else {
       ""
     }
   } else {
